rollouts/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: 2take1
spec:
  selector: { app: 2take1 }
  ports:
    - port: 80
      targetPort: 80
